--- a/templates/home.html
+++ b/templates/home.html
@@ -274,15 +274,15 @@
           <div class="item active">
             <img class="img-rounded" src="{% static "images/car1.jpg" %}" alt="Los Angeles" style="width:100%;">
             <div class="carousel-caption">
-              <h2 style="color: black">Heading 1</h2>
-              <p style="color: black">Description 1</p>
+              <h2 style="color: black">Stressed Waiting for the decision ?</h2>
+              <p style="color: black">We might help you ...!</p>
             </div>
           </div>
 
           <div class="item">
-            <img class="img-rounded" src="{% static "images/car2.jpg" %}" alt="Chicago" style="width:100%;">
+            <img class="img-rounded" src="{% static "images/carousal.jpg" %}" alt="Chicago" style="width:100%;">
             <div class="carousel-caption">
-                <h1 style="color: black"><STRONG>DECISION PENDING ... !!!</STRONG></h1>
+                <h1 style="color: black">Decision pending... !!!</h1>
               <p style="color: black">Do not worry we will take care of it</p>
             </div>
           </div>
@@ -290,8 +290,10 @@
           <div class="item">
             <img class="img-rounded" src="{% static "images/carousal3.jpg" %}" alt="New York" style="width:100%;">
             <div class="carousel-caption">
+                <!--
               <h1 style="color: black">Heading 3</h1>
               <p style="color: black">Description 3</p>
+              -->
             </div>
           </div>
 
