--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2104,130 +2104,9 @@
           </script>
         </div>
       </div>
-
-      <!-- medicarepart chart -->
-
-      <div class="row justify-content-between mb-2">
-        <div class="col-md-6 mt-5 mb-2">
-          <div id="medicarepart" class='bg_'></div>
-          <script type="text/javascript">
-          Highcharts.chart('medicarepart', {
-            chart: {
-              type: 'column'
-            },
-            title: {
-              text: 'MEDICARE PART vs TOTAL CLAIMS'
-            },
-            xAxis: {
-              categories: ['Part B', 'Part A', 'Part B of A', 'Part C', 'Unspecified'],
-              min:0,
-              title: {
-                text: 'Medicare Part'
-              },
-              max:4,
-              crosshair: true,
-            },
-            credits: {
-                enabled: false
-            },
-            yAxis: {
-              min: 0,
-              title: {
-                text: 'Claims'
-              }
-            },
-            legend: {
-      enabled: false,
-    },
-            tooltip: {
-              headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
-              pointFormat: '<tr><td style="color:{series.color};padding:0">Claims: </td>' +
-                '<td style="padding:0"><b>{point.y}</b></td></tr>',
-              footerFormat: '</table>',
-              shared: true,
-              useHTML: true
-            },
-            plotOptions: {
-                column: {
-                    pointPadding: 0.2,
-                    borderWidth: 0
-                }
-            },
-            series: [{
-              name: 'Medicare Part',
-              colorByPoint: true,
-              data: [244730, 51607, 20316, 224, 14]
-
-            }]
-          });
-
-          </script>
-        </div>
-
-        <!-- Appeal category chart -->
-
-        <div class="col-md-6 mt-5 mb-2">
-          <div id="appealcategory" class='bg_'></div>
-          <script type="text/javascript">
-          Highcharts.chart('appealcategory', {
-            chart: {
-              type: 'bar'
-            },
-            title: {
-              text: 'AVERAGE PROCESSING DAYS vs APPEAL CATEGORY'
-            },
-            xAxis: {
-              categories: ['Entitlement', 'Prosthetics/Orthotics', 'Medical Supplies', 'Dental', 'DME', 'Prescription Drug', 'Acute Hospital', 'Home Health/Hospice', 'Non-MD Practitioner', 'Skilled Nursing Facility', 'Outpatient Therapies', 'Clinic/Lab/X-Ray', 'Transportation', 'Other', 'Outpatient Mental Health', 'Nursing Home', 'Cost Sharing', 'Practitioner Services', 'Chiropractic', 'OON: physician office access', 'Vision Care', 'Non-Medicare Benefit', 'Request for tiering exception', 'Emergency Room', 'Out of Area', 'OON: drug not avail in-network', 'QIC Dismissal', 'Unspecified', 'Plan cost utiliz. tools disput', 'Rqst for drug not on formulary', 'AC Dismissal'],
-              min:0,
-              title: {
-                text: 'Appeal Category'
-              },
-              max:6,
-              crosshair: true,
-              scrollbar:{
-                enabled:true
-              }
-            },
-            yAxis: {
-              min: 0,
-              title: {
-                text: 'Days'
-              }
-            },
-            legend: {
-      enabled: false,
-    },
-    credits: {
-        enabled: false
-    },
-            tooltip: {
-              headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
-              pointFormat: '<tr><td style="color:{series.color};padding:0">Avg.Processing Days: </td>' +
-                '<td style="padding:0"><b>{point.y}</b></td></tr>',
-              footerFormat: '</table>',
-              shared: true,
-              useHTML: true
-            },
-            plotOptions: {
-                column: {
-                    pointPadding: 0.2,
-                    borderWidth: 0
-                }
-            },
-            series: [{
-              name: 'Appeal Category',
-              colorByPoint: true,
-              data: [405, 305, 240, 185, 131, 109, 107, 106, 106, 102, 101, 99, 97, 93, 92, 91, 90, 90, 89, 89, 89, 88, 86, 84, 83, 82, 78, 75, 74, 73, 63]
-
-            }]
-          });
-
-          </script>
-        </div>
-      </div>
     </div>
     <br>
-    <iframe class="bg_" src="http://127.0.0.1:8050/" style="width: 1350px;height: 2000px">
+    <iframe class="bg_" src="https://agadmindash002.herokuapp.com/" style="width: 1350px;height: 2300px;margin-bottom: 10%"></iframe>
     <footer class="footer" align="center">
   		<div class="footer" id="copy">© 2020 Copyright:
     	<a href="#"> decisionmaker.com by TEAM 10</a>
