--- a/templates/home.html
+++ b/templates/home.html
@@ -280,7 +280,7 @@
           </div>
 
           <div class="item">
-            <img class="img-rounded" src="{% static "images/carousal.jpg" %}" alt="Chicago" style="width:100%;">
+            <img class="img-rounded" src="{% static "images/carousal2.jpg" %}" alt="Chicago" style="width:100%;">
             <div class="carousel-caption">
                 <h1 style="color: black">Decision pending... !!!</h1>
               <p style="color: black">Do not worry we will take care of it</p>
