--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Decision Maker</title>
+    <title>Home</title>
     <link rel="icon" href='https://png.pngtree.com/element_our/20190528/ourmid/pngtree-love-icon-image_1175282.jpg' type='image/x-icon' sizes="16x16" />
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,7 +19,8 @@
       margin: 0 auto;
       width: 90%;
       font-family: Arial, Helvetica, sans-serif;
-      background-image: url("{% static "images/main_bg.png" %}");
+      {#background-image: url("https://image.freepik.com/free-photo/fading-blue-background_53876-88684.jpg");#}
+      background-color: #3D5E82  ;
       min-height: 500px;
       background-attachment: fixed;
       background-position: center;
@@ -36,7 +37,7 @@
         .bar1, .bar2, .bar3 {
           width: 35px;
           height: 5px;
-          background-color: navajowhite;
+          background-color: midnightblue;
           margin: 6px 0;
           transition: 0.4s;
         }
@@ -54,10 +55,11 @@
         }
     #navbar {
       overflow: inherit;
-      background-color: #040505;
-      padding: 20px 10px;
+      background-color: gainsboro;
+      padding: 10px 10px;
       transition: 0.4s;
       position: fixed;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       width: 100%;
       top: 0;
       left: 0;
@@ -66,7 +68,7 @@
 
     #navbar a {
       float: left;
-      color: white;
+      color: midnightblue;
       text-align: center;
       padding: 12px;
       text-decoration: none;
@@ -76,7 +78,7 @@
     }
     #navbar p {
       float: left;
-      color: white;
+      color: midnightblue;
       text-align: center;
       padding: 12px;
       text-decoration: none;
@@ -87,21 +89,21 @@
     #navbar #logo {
       font-family: "Berlin Sans FB";
       font-size: 50px;
-      color: orange;
+      color: midnightblue;
       transition: 0.4s;
       cursor: default;
     }
 
     #navbar a:hover {
-      color: orange;
+      color: midnightblue;
       -ms-transform: scale(1.5); /* IE 9 */
       -webkit-transform: scale(1.5); /* Safari 3-8 */
       transform: scale(1.2);
     }
 
     #navbar a.active {
-      background-color: orange;
-      color: black;
+      background-color: midnightblue;
+      color: white;
     }
 
     #navbar-right {
@@ -112,14 +114,14 @@
 	}
     .footer {
       overflow: hidden;
-      background-color: black;
+      background-color: gainsboro;
       padding: 5px 10px;
       position: relative;
       margin-right: -4.9vw;
       margin-left: -5vw;
     }
     .footer #copy{
-      color: orange;
+      color: midnightblue;
       font-size: 10px;
       transition: 0.4s;
     }
@@ -221,13 +223,8 @@
       display: table;
       clear: both;
     }
-    .card {
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-      padding: 16px;
-      height: 100%;
-      text-align: center;
-      background-color: black;
-      color: orange;
+    #about h1{
+        border-bottom: 5px solid orangered;
     }
     </style>
 </head>
@@ -236,7 +233,7 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <div class="fixed-bg"></div>
     <div id="navbar">
-      <p class="display-1" id="logo">DECISION MAKER <i class="fa fa-balance-scale" aria-hidden="true"></i></p>
+      <p class="display-1" id="logo">ForeTell <i class="fa fa-balance-scale" aria-hidden="true"></i></p>
       <div class="navbar" id="navbar-right">
           <a href="javascript:void(0);" style="font-size:15px;" class="icon">
             <div class="container" id="menuIcon" onclick="myFunction(this)">
@@ -261,34 +258,33 @@
         <a class="logout" style="padding-left: 10px;padding-right: 30px" href="{% url 'my_app:logout' %}">Logout <i class="fa fa-sign-out" aria-hidden="true"></i></a>
       </div>
     </div>
-    <div class="container rounded" style="margin-top: -10%;margin-bottom: 50px" align="center">
-        <div id="myCarousel" class="carousel slide rounded" data-ride="carousel">
-        <!-- Indicators -->
+    <div class="container" style="margin-top: -10%;margin-bottom: 50px" align="center">
+        <div id="myCarousel" class="carousel slide rounded" data-ride="carousel" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+        <!-- Indicators
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
           <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>
+        -->
         <div class="carousel-inner">
 
           <div class="item active">
-            <img class="img-rounded" src="{% static "images/car1.jpg" %}" alt="Los Angeles" style="width:100%;">
+            <img class="img-rounded" src="{% static "images/car1.jpg" %}" style="width:100%;height: 630px">
             <div class="carousel-caption">
-              <h2 style="color: black">Stressed Waiting for the decision ?</h2>
-              <p style="color: black">We might help you ...!</p>
+                <h1 style="width: 650px;color: midnightblue;opacity: 0.8;border-radius: 15px;background-color: gainsboro;text-shadow: 2px 2px 5px white"><strong>Worried about resolving A&G application on time ?</strong></h1>
             </div>
           </div>
 
           <div class="item">
-            <img class="img-rounded" src="{% static "images/carousal2.jpg" %}" alt="Chicago" style="width:100%;">
+            <img class="img-rounded" src="{% static "images/carousal2.jpg" %}" style="width:100%;height: 630px">
             <div class="carousel-caption">
-                <h1 style="color: black">Decision pending... !!!</h1>
-              <p style="color: black">Do not worry we will take care of it</p>
+                <h1 style="width: 650px;color: darkblue;background-color: gainsboro;border-radius: 15px;opacity: 0.8;text-shadow: 1px 1px 5px white"><strong>Don't worry, our ForeTell has got it covered for you !</strong></h1>
             </div>
           </div>
 
           <div class="item">
-            <img class="img-rounded" src="{% static "images/carousal3.jpg" %}" alt="New York" style="width:100%;">
+            <img class="img-rounded" src="{% static "images/carousal3.jpg" %}" style="width:100%;height: 630px">
             <div class="carousel-caption">
                 <!--
               <h1 style="color: black">Heading 3</h1>
@@ -310,15 +306,17 @@
         </a>
       </div>
     </div>
-    <div class="container rounded" id="about" style="margin-top: 10%;background-color: black;margin-bottom: 10%;opacity: 0.9">
-        <h1 style="color: orangered;padding-top: 5%;padding-bottom: 5%"><strong>About</strong></h1>
-        <h4 style="color: coral;font-family: 'Century Gothic'">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop p</h4>
-        <h4 style="color: coral;font-family: 'Century Gothic'">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop p</h4>
-        <h4 style="color: coral;font-family: 'Century Gothic';padding-bottom: 5%">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop p</h4>
+    <div class="container" id="about" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);border-radius: 15px;margin-top: 10%;background-color: gainsboro;margin-bottom: 10%;opacity: 0.9">
+        <h1 style="font-size: 50px;color: midnightblue;padding-top: 5%"><strong>About</strong></h1>
+        <div class="container">
+        <h2 style="color: midnightblue;padding-top: 5%;font-family: 'Century Gothic'">When it comes to appeals and grievances, healthcare organizations are struggling to increase productivity, improve quality scores, minimize penalties, enhance cash flow visibility and provider satisfaction.</h2>
+        <h2 style="color: midnightblue;font-family: 'Century Gothic'">With unpredictable volume, varying service agreement levels and concerns ranging from simple procedural issues to matters of life and death, managing insurance appeals and grievances (A&G) is a complex, labor-intensive process, especially when managed manually.</h2>
+        <h2 style="color: midnightblue;font-family: 'Century Gothic';padding-bottom: 5%">ForeTell helps healthcare payers to Process high volumes quickly and more accurately, Improves response time for providers and members (user) which improves provider satisfaction and productivity of the organization. Our idea of automating much of the A&G process and reporting, on basis of CPT and ICD codes, which helps to lower the cost and risk, greater efficiency and productivity, and improved payer satisfaction and additional reporting allows management greater process insight.</h2>
+        </div>
     </div>
     <footer class="footer" align="center">
   		<div class="footer" id="copy">© 2020 Copyright:
-    	<a href="#"> decisionmaker.com by TEAM 10</a>
+    	<a href="#" style="color: midnightblue"> ForeTell by team 10</a>
   		</div>
 	</footer>
     <script>
@@ -327,10 +325,10 @@
 
     function scrollFunction() {
       if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
-        document.getElementById("navbar").style.padding = "10px 10px";
-        document.getElementById("logo").style.fontSize = "35px";
+        document.getElementById("navbar").style.padding = "5px 10px";
+        document.getElementById("logo").style.fontSize = "40px";
       } else {
-        document.getElementById("navbar").style.padding = "20px 10px";
+        document.getElementById("navbar").style.padding = "10px 10px";
         document.getElementById("logo").style.fontSize = "50px";
       }
     }
