--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,8 @@
     body {
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
-      background-image: url("{% static "images/main_bg.png" %}");
+      {#background-image: url("{% static "images/main_bg.png" %}");#}
+      background-color: #3D5E82;
       min-height: 500px;
       background-attachment: fixed;
       background-position: center;
@@ -33,7 +34,7 @@
         .bar1, .bar2, .bar3 {
           width: 35px;
           height: 5px;
-          background-color: navajowhite;
+          background-color: midnightblue;
           margin: 6px 0;
           transition: 0.4s;
         }
@@ -51,8 +52,9 @@
         }
     #navbar {
       overflow: inherit;
-      background-color: black;
-      padding: 20px 10px;
+      background-color: gainsboro;
+      padding: 10px 10px;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       transition: 0.4s;
       position: fixed;
       width: 100%;
@@ -62,7 +64,7 @@
 
     #navbar a {
       float: left;
-      color: white;
+      color: midnightblue;
       text-align: center;
       padding: 12px;
       text-decoration: none;
@@ -72,7 +74,7 @@
     }
     #navbar p {
       float: left;
-      color: white;
+      color: midnightblue;
       text-align: center;
       padding: 12px;
       text-decoration: none;
@@ -83,21 +85,21 @@
     #navbar #logo {
       font-family: "Berlin Sans FB";
       font-size: 50px;
-      color: orange;
+      color: midnightblue;
       transition: 0.4s;
       cursor: default;
     }
 
     #navbar a:hover {
-      color: orange;
+      color: midnightblue;
       -ms-transform: scale(1.5); /* IE 9 */
       -webkit-transform: scale(1.5); /* Safari 3-8 */
       transform: scale(1.2);
     }
 
     #navbar a.active {
-      background-color: orange;
-      color: black;
+      background-color: midnightblue;
+      color: white;
     }
 
     #navbar-right {
@@ -220,7 +222,7 @@
 <body>
     <div class="fixed-bg"></div>
     <div id="navbar">
-      <p class="display-1" id="logo">DECISION MAKER <i class="fa fa-balance-scale" aria-hidden="true"></i></p>
+      <p class="display-1" id="logo">ForeTell <i class="fa fa-balance-scale" aria-hidden="true"></i></p>
     </div>
     <div class= "container rounded" id="form" style="margin-top:245px;padding-bottom: 5%;width: 40%">
     <form method="post" action="{% url 'my_app:login' %}">
@@ -239,7 +241,7 @@
       </div>
         <br>
       <div class="text-center">
-          <button type="submit" class="btn btn-lg btn-success">Login</button>
+          <button type="submit" class="btn btn-lg btn-primary">Login</button>
       </div>
     </form>
     <!--
@@ -261,10 +263,10 @@
 
     function scrollFunction() {
       if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
-        document.getElementById("navbar").style.padding = "10px 10px";
-        document.getElementById("logo").style.fontSize = "35px";
+        document.getElementById("navbar").style.padding = "5px 10px";
+        document.getElementById("logo").style.fontSize = "40px";
       } else {
-        document.getElementById("navbar").style.padding = "20px 10px";
+        document.getElementById("navbar").style.padding = "10px 10px";
         document.getElementById("logo").style.fontSize = "50px";
       }
     }
