--- a/templates/login.html
+++ b/templates/login.html
@@ -17,8 +17,8 @@
     body {
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
-      {#background-image: url("{% static "images/main_bg.png" %}");#}
-      background-color: #3D5E82;
+      background-image: url("{% static "images/login.jpg" %}");
+      {#background-color: #3D5E82;#}
       min-height: 500px;
       background-attachment: fixed;
       background-position: center;
@@ -56,6 +56,7 @@
       padding: 10px 10px;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       transition: 0.4s;
+      opacity: 0.9;
       position: fixed;
       width: 100%;
       top: 0;
