--- a/templates/login.html
+++ b/templates/login.html
@@ -225,7 +225,7 @@
     <div id="navbar">
       <p class="display-1" id="logo">ForeTell <i class="fa fa-balance-scale" aria-hidden="true"></i></p>
     </div>
-    <div class= "container rounded" id="form" style="margin-top:245px;padding-bottom: 5%;width: 40%">
+    <div class= "container" id="form" style="border-radius: 25px;margin-top:245px;padding-bottom: 5%;width: 40%">
     <form method="post" action="{% url 'my_app:login' %}">
         {% csrf_token %}
       <div class="form-group">
