--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -278,7 +278,7 @@
               },
 
               title: {
-                text: 'STATE WISE APPROVAL RATE'
+                text: 'STATE WISE APPROVAL AND DENIAL COUNT'
               },
 
               tooltip:{
@@ -402,71 +402,71 @@
                   name: 'Appeals',
                   colorByPoint: true,
                   data:
-                  [{name: 'ALABAMA', y: 2389, drilldown: 'ALABAMA'},
-                   {name: 'ALASKA', y: 120, drilldown: 'ALASKA'},
-                   {name: 'AMERICAN SAMOA', y: 0, drilldown: 'AMERICAN SAMOA'},
-                   {name: 'ARIZONA', y: 2314, drilldown: 'ARIZONA'},
-                   {name: 'ARKANSAS', y: 2554, drilldown: 'ARKANSAS'},
-                   {name: 'CALIFORNIA', y: 16464, drilldown: 'CALIFORNIA'},
-                   {name: 'COLORADO', y: 2405, drilldown: 'COLORADO'},
-                   {name: 'CONNECTICUT', y: 2626, drilldown: 'CONNECTICUT'},
-                   {name: 'DELAWARE', y: 648, drilldown: 'DELAWARE'},
-                   {name: 'DISTRICT OF COLUMBIA',
-                    y: 146,
-                    drilldown: 'DISTRICT OF COLUMBIA'},
-                   {name: 'FEDERATED STATES OF MICRONESIA',
-                    y: 0,
-                    drilldown: 'FEDERATED STATES OF MICRONESIA'},
-                   {name: 'FLORIDA', y: 30931, drilldown: 'FLORIDA'},
-                   {name: 'GEORGIA', y: 3422, drilldown: 'GEORGIA'},
-                   {name: 'GUAM GU', y: 0, drilldown: 'GUAM GU'},
-                   {name: 'HAWAII', y: 168, drilldown: 'HAWAII'},
-                   {name: 'IDAHO', y: 651, drilldown: 'IDAHO'},
-                   {name: 'ILLINOIS', y: 4658, drilldown: 'ILLINOIS'},
-                   {name: 'INDIANA', y: 3436, drilldown: 'INDIANA'},
-                   {name: 'IOWA', y: 1480, drilldown: 'IOWA'},
-                   {name: 'KANSAS', y: 1390, drilldown: 'KANSAS'},
-                   {name: 'KENTUCKY', y: 1671, drilldown: 'KENTUCKY'},
-                   {name: 'LOUISIANA', y: 1676, drilldown: 'LOUISIANA'},
-                   {name: 'MAINE', y: 548, drilldown: 'MAINE'},
-                   {name: 'MARSHALL ISLANDS', y: 0, drilldown: 'MARSHALL ISLANDS'},
-                   {name: 'MARYLAND', y: 2390, drilldown: 'MARYLAND'},
-                   {name: 'MASSACHUSETTS', y: 3492, drilldown: 'MASSACHUSETTS'},
-                   {name: 'MICHIGAN', y: 4999, drilldown: 'MICHIGAN'},
-                   {name: 'MINNESOTA', y: 3504, drilldown: 'MINNESOTA'},
-                   {name: 'MISSISSIPPI', y: 1271, drilldown: 'MISSISSIPPI'},
-                   {name: 'MISSOURI', y: 4496, drilldown: 'MISSOURI'},
-                   {name: 'MONTANA', y: 789, drilldown: 'MONTANA'},
-                   {name: 'NEBRASKA', y: 1211, drilldown: 'NEBRASKA'},
-                   {name: 'NEVADA', y: 750, drilldown: 'NEVADA'},
-                   {name: 'NEW HAMPSHIRE', y: 566, drilldown: 'NEW HAMPSHIRE'},
-                   {name: 'NEW JERSEY', y: 4652, drilldown: 'NEW JERSEY'},
-                   {name: 'NEW MEXICO', y: 1353, drilldown: 'NEW MEXICO'},
-                   {name: 'NEW YORK', y: 7778, drilldown: 'NEW YORK'},
-                   {name: 'NORTH CAROLINA', y: 2583, drilldown: 'NORTH CAROLINA'},
-                   {name: 'NORTH DAKOTA', y: 395, drilldown: 'NORTH DAKOTA'},
-                   {name: 'NORTHERN MARIANA ISLANDS',
-                    y: 0,
-                    drilldown: 'NORTHERN MARIANA ISLANDS'},
-                   {name: 'OHIO', y: 4628, drilldown: 'OHIO'},
-                   {name: 'OKLAHOMA', y: 1387, drilldown: 'OKLAHOMA'},
-                   {name: 'OREGON', y: 695, drilldown: 'OREGON'},
-                   {name: 'PALAU', y: 0, drilldown: 'PALAU'},
-                   {name: 'PENNSYLVANIA', y: 8162, drilldown: 'PENNSYLVANIA'},
-                   {name: 'PUERTO RICO', y: 856, drilldown: 'PUERTO RICO'},
-                   {name: 'RHODE ISLAND', y: 323, drilldown: 'RHODE ISLAND'},
-                   {name: 'SOUTH CAROLINA', y: 1507, drilldown: 'SOUTH CAROLINA'},
-                   {name: 'SOUTH DAKOTA', y: 415, drilldown: 'SOUTH DAKOTA'},
-                   {name: 'TENNESSEE', y: 4449, drilldown: 'TENNESSEE'},
-                   {name: 'TEXAS', y: 12582, drilldown: 'TEXAS'},
-                   {name: 'UTAH', y: 1799, drilldown: 'UTAH'},
-                   {name: 'VERMONT', y: 236, drilldown: 'VERMONT'},
-                   {name: 'VIRGIN ISLANDS', y: 0, drilldown: 'VIRGIN ISLANDS'},
-                   {name: 'VIRGINIA', y: 2877, drilldown: 'VIRGINIA'},
-                   {name: 'WASHINGTON', y: 2489, drilldown: 'WASHINGTON'},
-                   {name: 'WEST VIRGINIA', y: 1072, drilldown: 'WEST VIRGINIA'},
-                   {name: 'WISCONSIN', y: 3062, drilldown: 'WISCONSIN'},
-                   {name: 'WYOMING', y: 364, drilldown: 'WYOMING'}]
+                  [{name: 'FLORIDA', y: 30931, drilldown: 'FLORIDA'},
+                     {name: 'CALIFORNIA', y: 16464, drilldown: 'CALIFORNIA'},
+                     {name: 'TEXAS', y: 12582, drilldown: 'TEXAS'},
+                     {name: 'PENNSYLVANIA', y: 8162, drilldown: 'PENNSYLVANIA'},
+                     {name: 'NEW YORK', y: 7778, drilldown: 'NEW YORK'},
+                     {name: 'MICHIGAN', y: 4999, drilldown: 'MICHIGAN'},
+                     {name: 'ILLINOIS', y: 4658, drilldown: 'ILLINOIS'},
+                     {name: 'NEW JERSEY', y: 4652, drilldown: 'NEW JERSEY'},
+                     {name: 'OHIO', y: 4628, drilldown: 'OHIO'},
+                     {name: 'MISSOURI', y: 4496, drilldown: 'MISSOURI'},
+                     {name: 'TENNESSEE', y: 4449, drilldown: 'TENNESSEE'},
+                     {name: 'MINNESOTA', y: 3504, drilldown: 'MINNESOTA'},
+                     {name: 'MASSACHUSETTS', y: 3492, drilldown: 'MASSACHUSETTS'},
+                     {name: 'INDIANA', y: 3436, drilldown: 'INDIANA'},
+                     {name: 'GEORGIA', y: 3422, drilldown: 'GEORGIA'},
+                     {name: 'WISCONSIN', y: 3062, drilldown: 'WISCONSIN'},
+                     {name: 'VIRGINIA', y: 2877, drilldown: 'VIRGINIA'},
+                     {name: 'CONNECTICUT', y: 2626, drilldown: 'CONNECTICUT'},
+                     {name: 'NORTH CAROLINA', y: 2583, drilldown: 'NORTH CAROLINA'},
+                     {name: 'ARKANSAS', y: 2554, drilldown: 'ARKANSAS'},
+                     {name: 'WASHINGTON', y: 2489, drilldown: 'WASHINGTON'},
+                     {name: 'COLORADO', y: 2405, drilldown: 'COLORADO'},
+                     {name: 'MARYLAND', y: 2390, drilldown: 'MARYLAND'},
+                     {name: 'ALABAMA', y: 2389, drilldown: 'ALABAMA'},
+                     {name: 'ARIZONA', y: 2314, drilldown: 'ARIZONA'},
+                     {name: 'UTAH', y: 1799, drilldown: 'UTAH'},
+                     {name: 'LOUISIANA', y: 1676, drilldown: 'LOUISIANA'},
+                     {name: 'KENTUCKY', y: 1671, drilldown: 'KENTUCKY'},
+                     {name: 'SOUTH CAROLINA', y: 1507, drilldown: 'SOUTH CAROLINA'},
+                     {name: 'IOWA', y: 1480, drilldown: 'IOWA'},
+                     {name: 'KANSAS', y: 1390, drilldown: 'KANSAS'},
+                     {name: 'OKLAHOMA', y: 1387, drilldown: 'OKLAHOMA'},
+                     {name: 'NEW MEXICO', y: 1353, drilldown: 'NEW MEXICO'},
+                     {name: 'MISSISSIPPI', y: 1271, drilldown: 'MISSISSIPPI'},
+                     {name: 'NEBRASKA', y: 1211, drilldown: 'NEBRASKA'},
+                     {name: 'WEST VIRGINIA', y: 1072, drilldown: 'WEST VIRGINIA'},
+                     {name: 'PUERTO RICO', y: 856, drilldown: 'PUERTO RICO'},
+                     {name: 'MONTANA', y: 789, drilldown: 'MONTANA'},
+                     {name: 'NEVADA', y: 750, drilldown: 'NEVADA'},
+                     {name: 'OREGON', y: 695, drilldown: 'OREGON'},
+                     {name: 'IDAHO', y: 651, drilldown: 'IDAHO'},
+                     {name: 'DELAWARE', y: 648, drilldown: 'DELAWARE'},
+                     {name: 'NEW HAMPSHIRE', y: 566, drilldown: 'NEW HAMPSHIRE'},
+                     {name: 'MAINE', y: 548, drilldown: 'MAINE'},
+                     {name: 'SOUTH DAKOTA', y: 415, drilldown: 'SOUTH DAKOTA'},
+                     {name: 'NORTH DAKOTA', y: 395, drilldown: 'NORTH DAKOTA'},
+                     {name: 'WYOMING', y: 364, drilldown: 'WYOMING'},
+                     {name: 'RHODE ISLAND', y: 323, drilldown: 'RHODE ISLAND'},
+                     {name: 'VERMONT', y: 236, drilldown: 'VERMONT'},
+                     {name: 'HAWAII', y: 168, drilldown: 'HAWAII'},
+                     {name: 'DISTRICT OF COLUMBIA',
+                      y: 146,
+                      drilldown: 'DISTRICT OF COLUMBIA'},
+                     {name: 'ALASKA', y: 120, drilldown: 'ALASKA'},
+                     {name: 'AMERICAN SAMOA', y: 0, drilldown: 'AMERICAN SAMOA'},
+                     {name: 'FEDERATED STATES OF MICRONESIA',
+                      y: 0,
+                      drilldown: 'FEDERATED STATES OF MICRONESIA'},
+                     {name: 'GUAM GU', y: 0, drilldown: 'GUAM GU'},
+                     {name: 'MARSHALL ISLANDS', y: 0, drilldown: 'MARSHALL ISLANDS'},
+                     {name: 'NORTHERN MARIANA ISLANDS',
+                      y: 0,
+                      drilldown: 'NORTHERN MARIANA ISLANDS'},
+                     {name: 'PALAU', y: 0, drilldown: 'PALAU'},
+                     {name: 'VIRGIN ISLANDS', y: 0, drilldown: 'VIRGIN ISLANDS'}]
               }
             ],
               drilldown: {
