--- a/templates/AformD.html
+++ b/templates/AformD.html
@@ -254,7 +254,7 @@
     <div class= "container" id="form" style="border-radius: 10px;margin-top:210px;margin-bottom: 10%">
     <form style="margin-top:70px;margin-bottom: 100px" action="{% url "my_app:output" %}" method="post" enctype="multipart/form-data">
       {% csrf_token %}
-      <h6 style="color: orangered;padding-top: 5%;padding-bottom: 5%">* all fields are mandatory</h6>
+      <h6 style="color: orange;padding-top: 5%;padding-bottom: 5%">* All fields are mandatory</h6>
       <div class="row">
           <div class="col">
           <div class="form-group ">
