--- a/templates/output.html
+++ b/templates/output.html
@@ -24,7 +24,7 @@
     <a role="button" href="#output" id="clickButton"></a>
     <div class="scroll" id="output"></div>
     <div align="center" style="opacity: 0.9;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);border-radius: 15px;background-color: black;padding-top: 1%;margin-left: 25%;padding-bottom: 5%;height: 50%;width: 50%">
-        <h1 align="center" style="border-bottom: 5px solid orangered;font-family: 'Berlin Sans FB';color: mediumaquamarine">PREDICTION</h1>
+        <h1 align="center" style="border-bottom: 5px solid orangered;font-family: 'Berlin Sans FB';color: gainsboro">PREDICTION</h1>
         <div align="center" id="chartdiv"></div>
         <button class="btn btn-md" id="save" onclick="exportPNG();">save <i class="fa fa-download" aria-hidden="true"></i></button>
     </div>
